--- a/style.css
+++ b/style.css
@@ -209,6 +209,11 @@ h1 {
     padding-bottom: 3rem;
 }
 
+.band-info {
+    width: 90%;
+    margin: 0 auto;
+}
+
 
 
 
@@ -216,6 +221,13 @@ h1 {
 /* Music Player */
 
 /* bottom-contact */
+
+
+
+
+
+
+
 
 h3 {
     font-size: 2rem;
