added OG:img and fixed margin on home page about section response.

--- a/query.style.css
+++ b/query.style.css
@@ -6,7 +6,7 @@
         margin-right: 1rem;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr .5fr;
         gap: 2rem 0rem;
         grid-template-areas:
           "band-photo" 
