--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 html {
-    font-family: 'Roboto', 'sans-serif';
+    font-family: 'Goblin-one', 'sans-serif';
     min-width: 350px;
 }
 
@@ -104,6 +104,9 @@ header {
 
 /* Title */
 
+
+
+
 .title {
     position: relative;
     text-align: center;
@@ -129,6 +132,7 @@ header {
 h1 {
     color: white;
     font-size: 10vw;
+
 }
 
 
