--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ h3 {
       "show-element3 show-element4"
       "show-element5 show-element6"
       "show-element7 show-element8"
-      "show-element9 show-element-last";
+      "show-element-last show-element-last";
   }
   
   .show-element1 { 
