--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ header {
     display: inline-flex;
     align-items: center;
     z-index: 3;
-    background-color: #E5E4E2;
+    background-color: #f5f5f5;
     overflow: hidden;
     top: 0;
     left: 0;
