removed last show

--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ h3 {
       "show-element-3 show-element-4"
       "show-element-5 show-element-6"
       "show-element-7 show-element-8"
-      "show-element-9 show-element-10"
+      "show-element-9 ."
       "show-element-last show-element-last";      
 }
   
@@ -489,10 +489,6 @@ h3 {
 
 .show-element-9 { 
     grid-area: show-element-9; 
-}
-  
-.show-element-10 { 
-    grid-area: show-element-10; 
 }
   
   .show-element-last { 
