--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ header {
 }
 
 .title-2 {
+    padding-top: 4rem;
     position: relative;
     text-align: center;
     height: 50vh;
@@ -269,7 +270,7 @@ h1 {
 .about-info { 
     width: 90%;
     margin: 0 auto;
-    font-size: 1.75rem;
+    font-size: 1.55rem;
     text-align: center;
     line-height: 2.5rem;
     display:flex;
@@ -316,8 +317,6 @@ h1 {
 .h2-music {
     color: white;
     text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
     font-size: 3rem;
 }
 
@@ -369,7 +368,7 @@ h3 {
 .bottom-contact {
     color: black;
     text-align: center;
-    padding-top: 2rem;
+    padding-top: 1rem;
     padding-bottom: 3rem;
     margin-bottom: 3rem;
 }
@@ -380,14 +379,14 @@ h3 {
     font-size: 1.5rem;
     background-color: black;
     color: white;
-    border: outset white 3px;
+    border: outset white 1px;
 }
 
 .contact-btn:hover {
     cursor: pointer;
     background-color: lightgray;
     color: black;
-    border: outset gray 3px;
+    border: outset gray 1px;
 }
 
 .contact-btn:focus {
@@ -437,17 +436,16 @@ h3 {
 
 
 .show-container {
-    padding-top: 2rem;
-    padding-bottom: 5rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     width: 60%;
     margin: 0 auto;
     text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 5rem 5rem;
     grid-template-areas:
-      "show-element-1 ."
       "show-element-last show-element-last";      
 }
   
@@ -502,6 +500,7 @@ h3 {
     color: white;
     text-align: center;
     padding-bottom: 2rem;
+    margin-top:-1rem;
 }
 
 .date {
@@ -585,14 +584,14 @@ footer {
 }
 
 .footer-grid-container {
-    margin-right: 3 rem;
+    margin-right: 2.75rem;
     list-style-type: none;
     text-decoration: none;
     text-align: center;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    gap: 1rem 1rem;
+    gap: 0rem 0rem;
     grid-template-areas:
       "footer-info";
 }
@@ -632,7 +631,7 @@ footer {
     margin: 0 auto;
     text-align: center;
     margin-bottom: 3rem;
-    margin-top: 6rem;
+    margin-top: 3rem;
 }
 
 input {
@@ -662,6 +661,7 @@ textarea  {
     width: 60%;
     height: 3rem;  
     font-size: 1.5rem;
+    border: solid black 1px;
 }
 
 #message {
@@ -687,7 +687,7 @@ textarea:focus {
     font-size: 1.5rem;
     background-color: black;
     color: white;
-    border: solid grey 3px;
+    border: solid grey 1px;
 }
 
 .inverse-contact-btn:hover {
